trunk/Archive2/ec/518e0424db5ef1/output
+ g++-4.8 -std=c++11 -Wall -Wextra -Wconversion -fno-builtin -pedantic -O0 -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:8:39: error: call to non-constexpr function 'size_t strlen(const char*)'
   constexpr size_t x = strlen( "test" ) ;
                                       ^
main.cpp:8:20: warning: unused variable 'x' [-Wunused-variable]
   constexpr size_t x = strlen( "test" ) ;
                    ^
